--- a/index.html
+++ b/index.html
@@ -3,20 +3,110 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style>
-     hr {
-        margin-top: 50px;
-        margin-left: 40px;
-        display: inline-block;
-        background-color: black;
-        width: 50%;
-        height: 3px;
-     }
-    </style>
+    <meta
+      name="description"
+      content="Professional CV showcasing career history, education, and skills."
+    />
+    <meta
+      name="keywords"
+      content="CV, Resume, Career, Skills, Education, Web Development"
+    />
+    <meta name="author" content="Your Name" />
+
+    <!-- Open Graph (OG) Meta Tags for Social Media -->
+    <meta property="og:title" content="Your Name - Professional CV" />
+    <meta
+      property="og:description"
+      content="A concise and professional CV of Your Name, showcasing experience, skills, and education."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="path/to/your-image.jpg" />
+    <meta property="og:url" content="https://your-website.com/cv.html" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="path/to/favicon.ico" type="image/x-icon" />
+
+    <title>Your Name - CV</title>
   </head>
-  <body>
-<hr>
-<h1>Sardor</h1>
-</body>
+  <body
+    style="
+      font-family: Arial, sans-serif;
+      max-width: 600px;
+      margin: auto;
+      padding: 20px;
+      border: 1px solid #ccc;
+    "
+  >
+    <header>
+      <h1 style="font-size: 24px; margin-bottom: 5px">Your Name</h1>
+      <p style="color: green; font-size: 18px; margin-top: 0">
+        Junior Frontend Developer
+      </p>
+      <p>
+        123 Your Street<br />Your City, ST 12345<br />(123) 456-7890<br />no_reply@example.com
+      </p>
+    </header>
+
+    <hr style="border: none; border-top: 1px solid #000; margin: 20px 0" />
+
+    <section id="skills">
+      <h2 style="color: green; font-size: 18px">Skills</h2>
+      <p>
+        HTML, CSS, JavaScript, Accessibility, Figma to Design, Responsive Web
+        Design, Technical Writing, Presentation
+      </p>
+    </section>
+
+    <section id="education">
+      <h2 style="color: blue; font-size: 18px">Education</h2>
+      <p>
+        <strong>School Name, Location - Degree</strong><br />Month 20xx to Month
+        20xx
+      </p>
+      <p>List of exciting things you did at university</p>
+    </section>
+
+    <section id="experience">
+      <h2 style="color: green; font-size: 18px">Experience</h2>
+
+      <div>
+        <p>
+          <strong>Company Name, Location - Job Title</strong><br />Month 20xx to
+          Month 20xx
+        </p>
+        <ul>
+          <li>List of achievements</li>
+          <li>List of achievements</li>
+          <li>List of achievements</li>
+        </ul>
+        <p>
+          <strong>Skills:</strong> List of skills used or gained at this company
+        </p>
+      </div>
+
+      <div>
+        <p>
+          <strong>Company Name, Location - Job Title</strong><br />Month 20xx to
+          Month 20xx
+        </p>
+        <ul>
+          <li>List of achievements</li>
+          <li>List of achievements</li>
+          <li>List of achievements</li>
+        </ul>
+        <p>
+          <strong>Skills:</strong> List of skills used or gained at this company
+        </p>
+      </div>
+    </section>
+
+    <section id="links">
+      <h2 style="color: green; font-size: 18px">Across the Internet</h2>
+      <p>Add your LinkedIn, GitHub profile links</p>
+    </section>
+
+    <footer style="text-align: center; font-size: 12px; margin-top: 20px">
+      <p>&copy; 2024 Your Name. All Rights Reserved.</p>
+    </footer>
+  </body>
 </html>
